fixed styles for scrollbar in cart-dropdown

--- a/src/components/cart-dropdown/cart-dropdown-styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown-styles.scss
@@ -15,8 +15,13 @@
       height: 240px;
       display: flex;
       flex-direction: column;
-      overflow-y: scroll;
-      overflow-x: hidden;
+      overflow: scroll;
+      // overflow-y: scroll;
+      // overflow-x: hidden;
+
+    }
+    .cart-items::-webkit-scrollbar{
+      display: none;
     }
   
     button {
